--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ GITHUB_USERNAME="your_username_here"
 # Generate one here: https://github.com/settings/personal-access-tokens
 # Then click "Tokens (classic)" > "Generate new token" and select the `read:user` scope.
 GITHUB_PAT="your_pat_here"
+
+# Set to 'true' if you want a Discord notification via webhook
+# Set URL to the URL of your webhook (Setup explained in README.md)
+DISCORD_ENABLED=false
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+
