feat: initialize web application structure
- Initialize Next.js frontend with TypeScript and Tailwind CSS
- Initialize Cloudflare Worker backend with TypeScript
- Configure monorepo structure with npm workspaces
- Set up D1 database with users and notifications tables
- Create database migrations with indexes and triggers
- Add TypeScript types for database models and environment
- Configure wrangler.toml with D1 binding
- Add environment variable templates for frontend and backend
- Update gitignore files to exclude sensitive data

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Environment variables
 .env
+.env*.local
 
-# Python cache
+# Python cache (CLI folder)
 __pycache__/
 *.pyc
 *.pyo
@@ -10,6 +11,4 @@ __pycache__/
 # IDE specific
 .vscode/
 .idea/
-
-# Kiro memory backup (local only)
-KIRO_MEMORY_BACKUP.md
+.kiro
