feat: implement scheduled cron job for daily streak checks
- Add cron job handler that runs daily at 8 PM UTC
- Fetch all active users and check GitHub contributions
- Send Discord and Telegram notifications if no contributions today
- Decrypt user credentials securely before sending notifications
- Log all notification attempts to database with status
- Implement per-user error handling to prevent cascade failures
- Configure cron trigger in wrangler.toml
- Add detailed logging for monitoring and debugging

--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -15,9 +15,9 @@ binding = "DB"
 database_name = "streaky-db"
 database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 
-# Cron Triggers (will be configured in Task 7)
-# [triggers]
-# crons = ["0 20 * * *"]  # Daily at 8 PM UTC
+# Cron Triggers - Daily at 8 PM UTC
+[triggers]
+crons = ["0 20 * * *"]
 
 # Environment Variables (non-sensitive)
 # [vars]
