refactor: simplify worker environment variables
- Remove GITHUB_CLIENT_ID and GITHUB_CLIENT_SECRET from worker env
- Worker only needs ENCRYPTION_KEY now
- GitHub OAuth credentials only needed in frontend
- Users provide their own GitHub PAT instead of server secret
- Update env types and example file

--- a/web/backend/.dev.vars.example
+++ b/web/backend/.dev.vars.example
@@ -5,6 +5,5 @@
 # Encryption key for storing sensitive user data (32 characters minimum)
 ENCRYPTION_KEY=your-32-character-encryption-key-here
 
-# GitHub OAuth credentials
-GITHUB_CLIENT_ID=your-github-oauth-client-id
-GITHUB_CLIENT_SECRET=your-github-oauth-client-secret
+# Note: GitHub OAuth credentials are only needed in the frontend (Next.js)
+# Users provide their own GitHub PAT in the setup page
