--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -19,8 +19,10 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
