--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -25,5 +25,6 @@ crons = ["0 20 * * *"]
 
 # Secrets (use: wrangler secret put <KEY>)
 # - ENCRYPTION_KEY
-# - GITHUB_CLIENT_ID
-# - GITHUB_CLIENT_SECRET
+# - NEXTAUTH_SECRET
+# - GITHUB_CLIENT_ID (optional, for future use)
+# - GITHUB_CLIENT_SECRET (optional, for future use)
