--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
+		"@cloudflare/workers-types": "^4.20251011.0",
 		"tsx": "^4.20.6",
 		"typescript": "^5.5.2",
 		"vitest": "~3.2.0",
