feat: upgrade to Analytics Engine for SQL-queryable metrics
Frontend:
- Add Vercel Analytics package (with package-lock.json)
- Fix import path to use @vercel/analytics/next
- Add Analytics + SpeedInsights components

Backend:
- Add Analytics Engine dataset binding in wrangler.toml
- Update Env type with ANALYTICS binding
- Upgrade monitoring to write to Analytics Engine
- Keep console.log for debugging + Analytics Engine for SQL queries

Benefits:
- Query metrics with SQL in Cloudflare dashboard
- Unlimited cardinality data
- Time-series database for analytics
- No more log parsing needed

--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -15,6 +15,11 @@ binding = "DB"
 database_name = "streaky-db"
 database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 
+# Analytics Engine Binding
+[[analytics_engine_datasets]]
+binding = "ANALYTICS"
+dataset = "streaky_metrics"
+
 # Cron Triggers - Daily at 8 PM UTC
 [triggers]
 crons = ["0 20 * * *"]
