feat: add Rust VPS notification proxy to bypass Cloudflare Workers IP blocking
- Implement Rust Axum server for Discord/Telegram notifications
- Add AES-256-GCM encryption/decryption service
- Refactor Worker notification service to call VPS proxy
- Add VPS_URL and VPS_SECRET environment variables
- Add Dockerfile for Koyeb deployment
- Add authentication middleware with X-API-Secret
- Add health check endpoint
- Add 5 second timeout for VPS calls
- Update .gitignore to exclude server build artifacts

This solves the 429 error from Discord/Telegram APIs by using a clean IP from Koyeb VPS instead of Cloudflare Workers shared IP pool.

--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -25,12 +25,13 @@ dataset = "streaky_metrics"
 crons = ["0 20 * * *"]
 
 # Environment Variables (non-sensitive)
-# [vars]
-# ENVIRONMENT = "production"
+[vars]
+VPS_URL = "http://localhost:3000" # Change to production URL after deployment
 
 # Secrets (use: wrangler secret put <KEY>)
 # - ENCRYPTION_KEY (for encrypting Discord/Telegram credentials)
 # - NEXTAUTH_SECRET (must match Vercel - for JWT verification fallback)
 # - SERVER_SECRET (shared secret for server-to-server auth - must match Vercel)
+# - VPS_SECRET (Rust VPS API secret - must match server .env)
 # - GITHUB_CLIENT_ID (optional, for future use)
 # - GITHUB_CLIENT_SECRET (optional, for future use)
