--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -20,9 +20,9 @@ database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 binding = "ANALYTICS"
 dataset = "streaky_metrics"
 
-# Cron Triggers - Daily at 8 PM UTC
+# Cron Triggers - TEST: 8:20 PM UTC (5 minutes from now)
 [triggers]
-crons = ["0 20 * * *"]
+crons = ["20 20 * * *"]
 
 # Environment Variables (non-sensitive)
 [vars]
