--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -20,9 +20,14 @@ database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 binding = "ANALYTICS"
 dataset = "streaky_metrics"
 
-# Cron Triggers - TEST: 8:20 PM UTC (5 minutes from now)
+# Cron Triggers - TEST: 8:55 PM UTC
 [triggers]
-crons = ["20 20 * * *"]
+crons = ["55 20 * * *"]
+
+# Service Bindings - Allow Worker to call itself for distributed processing
+[[services]]
+binding = "SELF"
+service = "streaky"
 
 # Environment Variables (non-sensitive)
 [vars]
