feat(backend): implement atomic queue claim and improve cron processing
- Add atomic job reservation in D1 using UPDATE...RETURNING to avoid race conditions
- Implement reaper to requeue stale processing items (10+ min timeout)
- Bypass rate limiter for internal fan-out (only apply to external trigger)
- Remove deprecated dispatcher endpoint and unused files
- Archive legacy queue-processor.ts and streak-checker.ts
- Update cron schedule to daily at 12:00 UTC
- Update README with correct schedule time

--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -20,9 +20,9 @@ database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 binding = "ANALYTICS"
 dataset = "streaky_metrics"
 
-# Cron Triggers - Daily at 8 PM UTC (Production)
+# Cron Triggers - Daily at 12:00 UTC
 [triggers]
-crons = ["0 20 * * *"]
+crons = ["0 12 * * *"]
 
 # Service Bindings - Allow Worker to call itself for distributed processing
 [[services]]
