--- a/web/backend/wrangler.toml
+++ b/web/backend/wrangler.toml
@@ -20,9 +20,9 @@ database_id = "f746bca3-44f6-4163-becf-1aecaa2a02c2"
 binding = "ANALYTICS"
 dataset = "streaky_metrics"
 
-# Cron Triggers - Daily at 12:00 UTC
+# Cron Triggers - Hourly (per-user reminders by UTC hour)
 [triggers]
-crons = ["0 12 * * *"]
+crons = ["0 * * * *"]
 
 # Service Bindings - Allow Worker to call itself for distributed processing
 [[services]]
