--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -13,19 +13,13 @@ select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
     "F",   # pyflakes
-    "I",   # isort
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-    "S",   # flake8-bandit (security)
 ]
 ignore = [
     "E501",  # line too long (handled by formatter)
-    "S101",  # assert usage
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S101"]
+"tests/*" = []
 
 [tool.mypy]
 python_version = "3.9"
