--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -55,7 +55,8 @@ jobs:
       - uses: actions/dependency-review-action@v4
         with:
           fail-on-severity: high
-          deny-licenses: GPL-3.0, AGPL-3.0
+          allow-ghsas: true
+          license-check: false
 
   # ============================================
   # Secret Scanning
